# onair-sonoff

./: .travis.yml  Cargo.toml  README.md
src/: config.rs  main.rs
